src/modules/ui/preview-full-size/preview-full-size.scss
@import '../shared';

.container {
  position: absolute;
  z-index: 50;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  display: flex;
  flex-direction: column-reverse;

  pointer-events: none;

  background-color: black;

  align-items: center;
}

.frame {
  position: absolute;
  z-index: 2;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  opacity: .5;
}

